--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.news_paper">
    <application
-        android:label="news_paper"
+        android:label="News Paper"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
